--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="name-img">
         <div class="container clear-after">
             <div class="name">
-                <h4>Nikolay Tupitsyn</h4>
-                <p>Web-Developer</p>
+                <h4>Iryna Karazey</h4>
+                <p>html coder</p>
             </div>
             <div class="img">
                 <img src="img/img.png">
@@ -38,15 +38,15 @@
             <h2>Personal</h2>
             <ul>
                 <li class="clear-after"><b class="l">Name</b>
-                    <p class="software">Nikolay Tupitsyn</p></li>
+                    <p class="software">Iryna Karazey</p></li>
                 <li class="clear-after"><b class="l">Birthday</b>
-                    <p class="software">12 Aug 1994(23)</p></li>
+                    <p class="software">27 May 1994(23)</p></li>
                 <li class="clear-after"><b class="l">Skype</b>
-                    <p class="software">Nikilay</p></li>
+                    <p class="software"></p></li>
                 <li class="clear-after"><b class="l">Telephone</b>
                     <p class="software">+38(099)-211-49-03</p></li>
                 <li class="clear-after"><b class="l">E-mail</b>
-                    <p class="software">NikolayDeveloper@gmail.com</p></li>
+                    <p class="software">irynkakarazey94@gmail.com</p></li>
             </ul>
             <h2>Software</h2>
 
@@ -56,7 +56,7 @@
                     <p class="l">html</p>
                     <p class="l">css</p>
                     <p class="l">js</p>
-                    <p class="l">php</p>
+                    <p class="l">less</p>
                     <p class="l">bootstrap</p>
                     <p class="l">photoshop</p>
 
@@ -120,11 +120,6 @@
                     <li class="chart" data-percent="93"><span>PHP</span></li>
                     <li class="chart" data-percent="90"><span>PS</span></li>
                 </ul>
-            </div>
-            <div class="education clear-after">
-                <h2>Education</h2>
-                <div class="img-education"><img src="img/Materia.png"></div>
-                <div class="text-education work"><p>Образование: НТУУ КПИ, факультет РТФ,(магистр).<b>2012-2018</b></p></div>
             </div>
             <div class="my_works">
                 <h2>My works</h2>
