--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <li class="chart" data-percent="98"><span>HTML</span></li>
                     <li class="chart" data-percent="97"><span>CSS</span></li>
                     <li class="chart" data-percent="95"><span>JS</span></li>
-                    <li class="chart" data-percent="93"><span>PHP</span></li>
+                    <li class="chart" data-percent="93"><span>LESS</span></li>
                     <li class="chart" data-percent="90"><span>PS</span></li>
                 </ul>
             </div>
