--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 </div>
 <div class="footer">
     <div class="container">
-        Call: +38 (099)-211-49-03.   Email: NikolayDeveloper@gmail.com.
-        Skype:Nicolay.<a href="#">www.NicolayTupitcin.com.</a>
+        Call: +38 (066)-784-16-30.   Email: irynkakarazey@gmail.com.
     </div>
 </div>
 <script src="scripts/index.js">
